@@ -1,38 +1,24 @@
 package com.example.demo.service.impl;
 
-import java.sql.Timestamp;
-import java.util.Collections;
-import java.util.List;
-
-import org.springframework.stereotype.Service;
-
 import com.example.demo.model.RiskAnalysisResult;
 import com.example.demo.service.RiskAnalysisService;
+import org.springframework.stereotype.Service;
+import java.util.List;
 
 @Service
 public class RiskAnalysisServiceImpl implements RiskAnalysisService {
-
     @Override
     public RiskAnalysisResult analyzePortfolio(Long portfolioId) {
-        RiskAnalysisResult result = new RiskAnalysisResult();
-        result.setHighestStockPercentage(50.0);
-        result.setHighRisk(false);
-        result.setAnalysisDate(new Timestamp(System.currentTimeMillis()));
-        return result;
+        return new RiskAnalysisResult();
     }
 
     @Override
     public RiskAnalysisResult getAnalysisById(Long id) {
-        RiskAnalysisResult result = new RiskAnalysisResult();
-        result.setId(id);
-        result.setHighestStockPercentage(40.0);
-        result.setHighRisk(false);
-        result.setAnalysisDate(new Timestamp(System.currentTimeMillis()));
-        return result;
+        return new RiskAnalysisResult();
     }
 
     @Override
     public List<RiskAnalysisResult> getAnalysesForPortfolio(Long portfolioId) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
